--- a/pizza-app/package.json
+++ b/pizza-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TheKrol.github.io/PizzaApp",
+  "homepage": "https://TheKrol.github.io/PizzaApp/frontend",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
