--- a/pizza-app/frontend/package.json
+++ b/pizza-app/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TheKrol.github.io/PizzaApp",
+  "homepage": "https://TheKrol.github.io/PizzaSite",
   "name": "pizza-app",
   "version": "0.1.0",
   "private": true,
